cabal-version:       >=1.10
name:                project-with-hackage-dependency
version:             0.1.0.0
build-type:          Simple

executable project
  main-is:             Main.hs
  build-depends:       base
                       -- Add a package from hackage here to see whether `cabal update` ran.
                     , base-orphans
  default-language:    Haskell2010
